reworked based on comments by jeroen,  added font-awesome, added favicons

--- a/frontend/source/less/layout/footer.less
+++ b/frontend/source/less/layout/footer.less
@@ -2,13 +2,14 @@
     position: relative;
     min-height: 8rem;
     background-color: @color-grey;
-	padding: 3rem 0;
+	padding: 3rem 0 1rem 0;
 	font-family: @font-secondary;
 	text-transform: uppercase;
 
 	.footer-inner {
 		line-height: @line-height--medium;
 		font-size: @font-small;
+		margin-bottom: 3rem;
 
 		@media @screen-sm-max {
 			height: auto;
@@ -34,7 +35,7 @@
 		}
 
 		strong {
-			color: @color-black;
+			color: black;
 		}
 
 	}
