--- a/frontend/source/less/styles.less
+++ b/frontend/source/less/styles.less
@@ -3,7 +3,7 @@
 @import "core/base";
 @import "core/fonts";
 @import "core/grid";
-@import "core/icons";
+//@import "core/icons";
 @import "core/normalize";
 @import "core/typography";
 @import "core/variables";
@@ -25,5 +25,6 @@
 // Modules
 // -------------------------------
 //@import "modules/article";
+@import "lib/font-awesome/font-awesome";
 @import "lib/slick-slider";
 @import "modules/carousel";
