--- a/frontend/source/pug/index.pug
+++ b/frontend/source/pug/index.pug
@@ -4,9 +4,10 @@ include modules/carousel
 
 prepend variables
     - bodyClass = 'home'
-    - mainClass = '___no-padding';
 
 append main
+    .heading.___hidden
+        h1 Tactical Media Files homepage
     .carousel
         +carousel({
                 title : 'The Manifesto of John Doe: The Revolution Will Be Digitized', 
