--- a/frontend/source/pug/layout/footer.pug
+++ b/frontend/source/pug/layout/footer.pug
@@ -2,7 +2,7 @@
     .container
         .row
             .col-md-2
-            .col-md-3
+            .col-md-3.center-xs.start-md
                 .footer-inner
                     p
                         strong Tactical Media Files
@@ -15,7 +15,7 @@
                             a.footer__link( href="#" ) Contact
                         li
                             a.footer__link( href="#" ) Blog
-            .col-md-3
+            .col-md-3.center-xs.start-md
                 .footer-inner
                     p
                         strong Filter archive
@@ -28,7 +28,7 @@
                             a.footer__link( href="#" ) Pictures
                         li
                             a.footer__link( href="#" ) Files
-            .col-md-3
+            .col-md-3.center-xs.start-md
                 .footer-inner
                     p
                         strong Browse archive
