--- a/frontend/source/less/components/readmore.less
+++ b/frontend/source/less/components/readmore.less
@@ -1,13 +1,15 @@
 .read-more {
     background-color: @color-primary;
-    color: @color-white;
+    color: white;
     font-family: @font-secondary;
     font-size: @font-small;
+    line-height: @line-height--large;
+    
     text-transform: uppercase;
     text-align: center;
     margin: 1rem auto;
     display: block;
-    width: 8rem;
-    padding: 0.8rem 1rem 0.4rem;  
+    width: 9rem;
+    padding: 0.4rem 0 0.1rem 0;  
     letter-spacing: 0.1rem;
 }
