--- a/frontend/source/less/components/selector.less
+++ b/frontend/source/less/components/selector.less
@@ -1,7 +1,7 @@
 .selector {
     position: relative;
-    width: 100%;
-    max-width: 16rem;
+    //width: 100%;
+    //max-width: 16rem;
     user-select: none;
     text-align: left;
 
@@ -18,8 +18,9 @@
 
     select {
         position: absolute;
+        right: 0;
         //width: 100%;
-        width: 16rem;
+        //width: 16rem;
         opacity: 0;
         z-index: -1;
     }
@@ -31,21 +32,22 @@
 
 .selector__select {
     padding: 0 2rem;
-    color: @color-black;
-    line-height: 4.6rem;
-    border: 0.2rem solid @color-grey--40;
+    //color: black;
+    //line-height: 4.6rem;
+    //border: 0.2rem solid @color-grey--40;
     cursor: pointer;
     transition: color @trans-fast, border-color @trans-fast;
 
-    //.icon(chevron-down, after);
-
     &:after {
+        .fa-icon();
+        content: @fa-var-chevron-down;
+        outline: none;
+        
         position: absolute;
         right: 2rem;
-        /* icon height */
-        font-size: 1rem;
-        color: @color-black;
-        line-height: inherit;
+        top: 2rem;
+        font-size: 0.8rem;
+        color: black;
         z-index: 2;
         pointer-events: none;
         transition: color @trans-fast, transform @trans-fast;
@@ -57,7 +59,7 @@
     top: 0;
     left: 0;
     right: 0;
-    background-color: @color-white;
+    background-color: white;
     border: 1px solid transparent;
     box-shadow: @box-shadow;
     z-index: 1;
