--- a/frontend/source/less/core/base.less
+++ b/frontend/source/less/core/base.less
@@ -4,17 +4,17 @@
     box-sizing: inherit;
 }
 
-*:focus {
-    // remove outline from all focused elements
-    outline: none;
-}
+// *:focus {
+//     // remove outline from all focused elements
+//     outline: none;
+// }
 
 html {
     //Set the base box-sizing that will be inherited by all other elements
     box-sizing: border-box;
 
     // Set the base font size for rem sizes
-    font-size: 8px;
+    font-size: 10px;
 
     // Add cross-browser antialiasing
     -webkit-font-smoothing: antialiased;
@@ -28,13 +28,6 @@ html {
     margin: 0;
     cursor: default;
 
-    @media @screen-sm-max {
-        font-size: 7px;
-    }
-    // in between is base size 8px
-    @media @screen-lg {
-        font-size: 10px;
-    }
     @media @screen-xl {
         font-size: 12px;
     }
@@ -48,8 +41,8 @@ body {
     font-family: @font;
     font-size: @font-medium;
     line-height: @line-height--medium;
-    color: @color-black;
-    background-color: @color-white;
+    color: black;
+    background-color: white;
     overflow-y: scroll;
 }
 
@@ -64,15 +57,26 @@ a {
     text-decoration: none;
 }
 
+// Usability
+// -------------------------------
+
+// Skip directly to main content
 #skip-link {
     position: absolute;
     top: 0;
     right: 100%;
-    background-color: @color-white;
+    background-color: white;
     padding: 0.5rem 1rem;
     
     &:focus {
         right: auto;
-        z-index: 9;
+        z-index: @index-9;
     }
+}
+
+// Normalize focusable elements cross browser
+a:focus {
+   outline: none;
+   background-color: fade(@color-grey--20, 75%);
+   // text-shadow: 0.05em 0 0 @color-grey--20, -0.05em 0 0 @color-grey--20, 0 0.05em 0 @color-grey--20, 0 -0.05em 0 @color-grey--20, 0.1em 0 0 @color-grey--20, -0.1em 0 0 @color-grey--20, 0 0.1em 0 @color-grey--20, 0 -0.1em 0 @color-grey--20;
 }
