--- a/frontend/source/less/layout/header.less
+++ b/frontend/source/less/layout/header.less
@@ -1,30 +1,52 @@
 .header {
-	z-index: @lift-20;
+	z-index: @index-2;
 	position: absolute;
 	width: 100%;
-    height: 3.6rem;
-    
-	.container {
-	    display: flex;
-	    align-items: center;
-	}
+    height: 12rem;
+    padding: 1rem 2rem 1rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-	.header__logo {
-	    width: 16rem;
-	    margin: 0.8rem 0;
-	}
+    .list & {
+        margin-left: 0.2rem;
+        height: 5rem;
+        width: 6.4rem;
+        padding: 0;
 
-	p { 
-		width: 100%;
-		text-align: right;
-		strong {
-			font-family: @font-secondary;
-			font-size: @font-small;
-			text-transform: uppercase;
-		    letter-spacing: 0.2rem;
-			color: @color-white;
-			text-shadow: 0.1rem 0.1rem 0.2rem @color-grey--50;
+        @media @screen-lg-max {
+            width: 5rem;
+        }
+
+    }
+	
+    .header__logo {
+	    img {
+		    width: 16rem;
+            .list & {
+                //width: 6.4rem;
+            }
+
 		}
+	}
+	
+	strong {
+		display: block;
+		text-align: right;
+		font-family: @font-secondary;
+		font-size: @font-extra-small;
+		text-transform: uppercase;
+	    letter-spacing: 0.3rem;
+		color: white;
+
+        @media @screen-md-max {
+            font-size: 1rem;
+            letter-spacing: 0.2rem;
+        }
+
+        .list & {
+            display: none;
+        }
 	}
 
 }
