--- a/frontend/source/less/layout/main-content.less
+++ b/frontend/source/less/layout/main-content.less
@@ -1,11 +1,17 @@
 .main-content {
     flex-grow: 1;
-    padding: 9rem 0 10rem 0;
+    padding: 0rem 0 10rem 0;
 
     &.___no-padding {
         padding-top: 0;
     }
 
+    .heading {
+        &.___hidden {
+            display: none;
+        }
+    }
+    
     .content-type {
         margin-top: 6rem;
         color: @color-primary;
@@ -17,36 +23,26 @@
 
     .title {
         margin: 2rem 0 3rem 0;
-        color: @color-black;
+        color: @color-grey--50;
         font-size: @font-title-normal;
         line-height: @line-height--title-normal;
         text-align: center;
         font-weight: normal;
 
         a {
-            color: @color-black;
+            color: @color-grey--50;
         }
     }
 
     p, .intro {
         font-size: @font-large;
         line-height: @line-height--large;
-        color: @color-secondary;
+        color: @color-grey--30;
         font-style: oblique;
         text-align: center;
     }
-
-    .read-more {
-        background-color: @color-primary;
-        color: @color-white;
-        font-family: @font-secondary;
-        font-size: @font-small;
-        text-transform: uppercase;
-        text-align: center;
-        margin: 1rem auto;
-        display: block;
-        width: 8rem;
-        padding: 0.8rem 1rem 0.4rem;
+    .intro {
+        margin-bottom: 4rem;
     }
 
     .tags {
@@ -55,7 +51,7 @@
         font-size: @font-extra-small;
         text-transform: uppercase;
         font-weight: 200;
-        margin: 3rem 0;
+        margin: 4rem 0;
 
         a {
             color: @color-secondary;
@@ -67,7 +63,7 @@
         border: 0;
         height: 0.2rem;
         background-color: @color-grey;
-        margin: 6rem auto 2rem;
+        margin: 6rem auto 1rem;
     }
 }
 
