--- a/frontend/source/pug/layout/header.pug
+++ b/frontend/source/pug/layout/header.pug
@@ -1,7 +1,5 @@
 .header
-    .container
-        h1 
+        em
             a.header__logo( href="/" )
-                img.header__logo( src="styles/images/tmf-logo.png" alt="Tactical Media Files" )
-        p
-            strong The 'living archive' for Tactical Media's present, past and future.
+                img( src="styles/images/logo-tmf.svg" alt="Tactical Media Files" )
+        strong The 'living archive' for Tactical Media's present, past and future.
