--- a/frontend/source/pug/layout/page.pug
+++ b/frontend/source/pug/layout/page.pug
@@ -16,7 +16,10 @@ html( lang="en" )
         title=title
 
         link( rel="icon" href="/favicon.png" )
-        link( rel="shortcut icon" href="/favicon.ico" )
+
+        link( rel="apple-touch-icon", sizes="152x152", href="/apple-touch-icon.png" )
+        link( rel="icon", type="image/png", href="/favicon-32x32.png", sizes="32x32" )
+        link( rel="icon", type="image/png", href="/favicon-16x16.png", sizes="16x16" )
 
         meta( name="viewport" content="width=device-width,initial-scale=1.0" )
 
