--- a/frontend/source/less/core/variables.less
+++ b/frontend/source/less/core/variables.less
@@ -8,6 +8,7 @@
 // Black & white
 @color-black-transparent:           fade(#444, 96%);
 @color-white-transparent:           fade(white, 60%);
+@color-primary-transparent:         fade(@color-primary, 50%);
 @color-grey:                        #EFEFEF;
 
 // Grey
