--- a/frontend/source/less/layout/header.less
+++ b/frontend/source/less/layout/header.less
@@ -9,7 +9,7 @@
     align-items: center;
 
     .list & {
-        margin-left: 0.2rem;
+        margin-left: .7rem;
         height: 5rem;
         width: 6.4rem;
         padding: 0;
@@ -23,10 +23,6 @@
     .header__logo {
 	    img {
 		    width: 16rem;
-            .list & {
-                //width: 6.4rem;
-            }
-
 		}
 	}
 	
