--- a/frontend/source/pug/layout/navigation.pug
+++ b/frontend/source/pug/layout/navigation.pug
@@ -15,3 +15,9 @@ nav.navigation
                     option( value="all" selected ) All
                     option( value="articles" ) Articles
                     option( value="videos" ) Videos
+                    option( value="pictures" ) Pictures
+                    option( value="files" ) Files
+                    option( value="collections" ) Collections
+                    option( value="events" ) Events
+                    option( value="campaigns" ) Campaigns
+                    option( value="people" ) Peoples
