--- a/frontend/source/pug/layout/page.pug
+++ b/frontend/source/pug/layout/page.pug
@@ -3,7 +3,7 @@
 
 //- Load variables
 block variables
-    - var title = title ? ( title + " - TMF" ) : "TMF";
+    - var title = title ? ( title + " - Tactical Media Files" ) : "Tactical Media Files";
     - var bodyClass = bodyClass || "";
     - var mainClass = mainClass || "";
 
