--- a/frontend/source/less/styles.less
+++ b/frontend/source/less/styles.less
@@ -17,14 +17,19 @@
 @import "layout/page-layout";
 @import "layout/overlay";
 
+// Libraries
+// -------------------------------
+@import "lib/font-awesome/font-awesome";
+@import "lib/slick-slider";
+
 // Components
 // -------------------------------
 @import "components/readmore";
+@import "components/pager";
 @import "components/selector";
 
 // Modules
 // -------------------------------
 //@import "modules/article";
-@import "lib/font-awesome/font-awesome";
-@import "lib/slick-slider";
 @import "modules/carousel";
+@import "modules/content";
