--- a/frontend/source/less/layout/main-content.less
+++ b/frontend/source/less/layout/main-content.less
@@ -1,6 +1,5 @@
 .main-content {
     flex-grow: 1;
-    padding: 0rem 0 10rem 0;
 
     &.___no-padding {
         padding-top: 0;
@@ -11,59 +10,14 @@
             display: none;
         }
     }
-    
-    .content-type {
-        margin-top: 6rem;
-        color: @color-primary;
-        font-family: @font-secondary;
-        font-style: italic;
-        text-transform: lowercase;
-        text-align: center;
-    }
-
-    .title {
-        margin: 2rem 0 3rem 0;
-        color: @color-grey--50;
-        font-size: @font-title-normal;
-        line-height: @line-height--title-normal;
-        text-align: center;
-        font-weight: normal;
-
-        a {
-            color: @color-grey--50;
-        }
-    }
-
-    p, .intro {
-        font-size: @font-large;
-        line-height: @line-height--large;
-        color: @color-grey--30;
-        font-style: oblique;
-        text-align: center;
-    }
-    .intro {
-        margin-bottom: 4rem;
-    }
-
-    .tags {
-        text-align: center;
-        font-family: @font-secondary;
-        font-size: @font-extra-small;
-        text-transform: uppercase;
-        font-weight: 200;
-        margin: 4rem 0;
-
-        a {
-            color: @color-secondary;
-        }
-    }
 
     hr { 
         width: 50%;
         border: 0;
         height: 0.2rem;
-        background-color: @color-grey;
+        background-color: @color-grey--60;
         margin: 6rem auto 1rem;
     }
+
 }
 
