--- a/frontend/source/less/core/variables.less
+++ b/frontend/source/less/core/variables.less
@@ -25,7 +25,8 @@
 // -------------------------------
 
 @font:								'Georgia', serif;
-@font-secondary:                    'League Spartan', sans-serif;
+@font-secondary:                    'LeagueSpartan', sans-serif;
+@font-tertiary:                     'Helvetica Neue', Helvetica, sans-serif;
 
 // Font sizes
 @font-extra-small:                  1.2rem;
@@ -39,7 +40,7 @@
 @font-title-normal:                 3.6rem;
 @font-title-main:                   4.2rem;
 
-@line-height--addition:             .8rem;
+@line-height--addition:             .9rem;
 
 @line-height--base:                 @font-base + @line-height--addition;
 @line-height--small:                @font-small + @line-height--addition;
