--- a/frontend/source/less/layout/navigation.less
+++ b/frontend/source/less/layout/navigation.less
@@ -98,8 +98,9 @@
         }        
     }
     .nav__topics {
-        .list & {
-            margin-left: 5rem;
+        margin-left: 5rem;
+        .home & {
+            margin-left: 0;
         }
 
     }
