--- a/frontend/source/pug/videos.pug
+++ b/frontend/source/pug/videos.pug
@@ -3,7 +3,7 @@ extends layout/page
 prepend variables
     - title = 'Videos'
     - selected = 'videos';
-    - bodyClass = 'list'
+    - bodyClass = 'videos'
 
 append main
 
