--- a/frontend/source/less/core/fonts.less
+++ b/frontend/source/less/core/fonts.less
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: 'League Spartan';
+    font-family: 'LeagueSpartan';
     src: url('../fonts/leaguespartan-bold.eot');
     src: url('../fonts/leaguespartan-bold.eot?#iefix') format('embedded-opentype'),
          url('../fonts/leaguespartan-bold.woff2') format('woff2'),
          url('../fonts/leaguespartan-bold.woff') format('woff'),
          url('../fonts/leaguespartan-bold.ttf') format('truetype'),
          url('../fonts/leaguespartan-bold.svg#league_spartanbold') format('svg');
-    font-weight: bold;
+    font-weight: normal;
     font-style: normal;
 }
