--- a/frontend/source/less/layout/header.less
+++ b/frontend/source/less/layout/header.less
@@ -1,33 +1,44 @@
 .header {
 	z-index: @index-2;
 	position: absolute;
-	width: 100%;
-    height: 12rem;
-    padding: 1rem 2rem 1rem 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    .list & {
-        margin-left: .7rem;
-        height: 5rem;
-        width: 6.4rem;
-        padding: 0;
+    margin-left: .7rem;
+    height: 5rem;
+    width: 6.4rem;
+    padding: 0;
 
-        @media @screen-lg-max {
-            width: 5rem;
-        }
-
+    @media @screen-lg-max {
+        width: 5rem;
     }
-	
+    
     .header__logo {
-	    img {
-		    width: 16rem;
-		}
-	}
+        img {
+            width: 7rem;
+        }
+    }
+
+    .home & {
+        width: 100%;
+        height: 12rem;
+        padding: 1rem 2rem 1rem 1rem;
+
+        .header__logo {
+            img {
+                width: 16rem;
+            }
+        }
+    }	
 	
 	strong {
-		display: block;
+		display: none;
+
+        .home & {
+            display: block;
+        }
+
 		text-align: right;
 		font-family: @font-secondary;
 		font-size: @font-extra-small;
@@ -40,9 +51,6 @@
             letter-spacing: 0.2rem;
         }
 
-        .list & {
-            display: none;
-        }
 	}
 
 }
