--- a/frontend/source/less/styles.less
+++ b/frontend/source/less/styles.less
@@ -24,12 +24,14 @@
 
 // Components
 // -------------------------------
+@import "components/content-type";
 @import "components/readmore";
 @import "components/pager";
 @import "components/selector";
 
 // Modules
 // -------------------------------
-//@import "modules/article";
+@import "modules/article";
 @import "modules/carousel";
 @import "modules/content";
+@import "modules/content-related";
