--- a/frontend/source/less/styles.less
+++ b/frontend/source/less/styles.less
@@ -34,4 +34,5 @@
 @import "modules/article";
 @import "modules/carousel";
 @import "modules/content";
+@import "modules/content-info";
 @import "modules/content-related";
