video page, fixed mixins, added tags mixin

--- a/frontend/source/less/components/readmore.less
+++ b/frontend/source/less/components/readmore.less
@@ -12,4 +12,10 @@
     width: 9rem;
     padding: 0.4rem 0 0.1rem 0;  
     letter-spacing: 0.1rem;
+
+    transition: @trans-normal-material;
+
+    &:hover {
+        background-color: @color-primary-dark;
+    }
 }
