--- a/frontend/source/less/styles.less
+++ b/frontend/source/less/styles.less
@@ -28,6 +28,7 @@
 @import "components/readmore";
 @import "components/pager";
 @import "components/selector";
+@import "components/tags";
 
 // Modules
 // -------------------------------
@@ -36,3 +37,4 @@
 @import "modules/content";
 @import "modules/content-info";
 @import "modules/content-related";
+@import "modules/video";
