--- a/frontend/source/pug/layout/navigation.pug
+++ b/frontend/source/pug/layout/navigation.pug
@@ -15,11 +15,11 @@ nav.navigation
                 label.select-label( for="filter" ) Filter
                 select( id="filter" name="filter" data-select-filter )
                     option( value="list.html" selected=(selected === 'all') ) All
-                    option( value="articles.html" selected=(selected === 'articles') ) Articles
-                    option( value="videos.html" selected=(selected === 'videos') ) Videos
+                    option( value="article.html" selected=(selected === 'articles') ) Articles
+                    option( value="video.html" selected=(selected === 'videos') ) Videos
                     option( value="pictures" ) Pictures
                     option( value="files" ) Files
                     //option( value="collections" ) Collections
                     option( value="events" ) Events
                     option( value="campaigns" ) Campaigns
-                    option( value="people"  selected=(selected === 'people')  ) People
+                    option( value="person.html"  selected=(selected === 'people')  ) People
