--- a/frontend/source/pug/list.pug
+++ b/frontend/source/pug/list.pug
@@ -17,11 +17,19 @@ append main
                         a( href="#" ) NRA and Smith &amp; Wesson Partner to "Share the Safety" With All Americans
                     p.intro Simi Valley, Ca. - The NRA announced today, at the Ronald Reagan Presidential Library, a new program to get guns into the hands of statistically under-armed Americans—from homosexuals to the elderly to besieged urban communities—and make self-defense, rather than gun control, the protection of choice for all Americans.
                     a.read-more( href="#" ) Read
-                    .tags 
-                        a( href="#" ) Activism, 
-                        a( href="#" ) The Yesmen, 
-                        a( href="#" ) Performance, 
-                        a( href="#" ) Firearms
+                    +tags({
+                            tag: 'Activism',
+                            url: 'list.html'
+                        }, {
+                            tag: 'The Yesmen',
+                            url: 'list.html'
+                        }, {
+                            tag: 'Performance',
+                            url: 'list.html'
+                        }, {
+                            tag: 'Firearms',
+                            url: 'list.html'
+                        })
                 hr
             .col-md-2
         .row
@@ -33,13 +41,25 @@ append main
                         a( href="#" ) Nuit Debout
                     p.intro Nuit Debout is a French social movement that began on March 31, 2016, arising out of protests against proposed neoliberal labor reforms known as the "Loi Travail," or the "El Khomri Law". The movement is centred at Paris's Place de la République, where protestors have held nightly assemblies following the
                     a.read-more( href="#" ) Read
-                    .tags 
-                        a( href="#" ) Campaign, 
-                        a( href="#" ) Precarity, 
-                        a( href="#" ) Art Of Campaigning, 
-                        a( href="#" ) Labour, 
-                        a( href="#" ) Street Protest, 
-                        a( href="#" ) Economics
+                    +tags({
+                            tag: 'Campaign',
+                            url: 'list.html'
+                        }, {
+                            tag: 'Precarity',
+                            url: 'list.html'
+                        }, {
+                            tag: 'Art Of Campaigning',
+                            url: 'list.html'
+                        }, {
+                            tag: 'Labour',
+                            url: 'list.html'
+                        }, {
+                            tag: 'Street Protest',
+                            url: 'list.html'
+                        }, {
+                            tag: 'Economics',
+                            url: 'list.html'
+                        })
 
             .col-md-2
 
