--- a/frontend/source/pug/modules/carousel.pug
+++ b/frontend/source/pug/modules/carousel.pug
@@ -8,6 +8,6 @@ mixin carousel(...items)
                         p.item__type 
                             strong featured #{item.type}
                         h2.item__title 
-                            a( href="#{item.url}" ) #{item.title}
+                            a( href=item.url ) #{item.title}
                         .item__read-more
-                            a.read-more( href="#{item.url}" ) Read
+                            a.read-more( href=item.url ) Read
