--- a/frontend/source/less/layout/header.less
+++ b/frontend/source/less/layout/header.less
@@ -5,10 +5,9 @@
     justify-content: space-between;
     align-items: center;
 
-    margin-left: .7rem;
     height: 5rem;
     width: 6.4rem;
-    padding: 0;
+    padding: 0 0 .7rem 0;
 
     @media @screen-lg-max {
         width: 5rem;
