--- a/frontend/source/pug/article.pug
+++ b/frontend/source/pug/article.pug
@@ -63,9 +63,9 @@ append main
                     h4.content-related__title Links
                     ul.content-related__list
                         li
-                            a( href="#" ) https://nrapress.org/articles/20160622/nra-smith-wesson-partner-share-the-safety/
+                            a( href="https://nrapress.org/articles/20160622/nra-smith-wesson-partner-share-the-safety/" ) https://nrapress.org/articles/20160622/nra-smith-wesson-partner-share-the-safety/
                         li
-                            a( href="#" ) https://nrapress.org
+                            a( href="https://nrapress.org" ) https://nrapress.org
                 .col-md-2
         
         section#files.content-related
